overflow corrected

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -22,6 +22,7 @@ body {
 }
 .left-panel{
   /* top:60px; */
+  text-align: center;
   max-height: 100vh;
     background-color:white;
     padding: 10px 20px;
