--- a/react-app/src/style/card.css
+++ b/react-app/src/style/card.css
@@ -8,6 +8,7 @@
 }
 /*flex container for a card*/
 .card {
+    overflow-wrap:anywhere; 
     display:flex;
     margin: 20px 0 20px 0;
     width:100%;
